more color changes. fix to mobile clipping

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,10 +9,11 @@
   }
   
   html, body {
-    height: 100%;
+    height: calc(var(--vh, 1vh) * 100);
     margin: 0;
     font-family: var(--font-bodoni);
     background-color: #000;
+    overflow-x: hidden;
   }
 }
 
